# workshop-calibration

./: .devcontainer  LICENSE  README.md  TODO.md  TODO_V1.md  calibration_tutorial.md  pyproject.toml  start-marimo.sh
.devcontainer/: devcontainer.json
data/: dataset_simpleclass.arff  dataset_stage_2.arff
src/calibration_test/: 3-class-classification.py  __init__.py  convert.py  main.py  multi_class_calibration.py  multi_classification.py  multi_label_calibration.py  simple_class_calibration.py  simple_classification.py
src/workshop_calibration/: __init__.py  stage_1 copy.py  stage_1.ipynb  stage_1.py  stage_2.ipynb  stage_2.py  stage_3.ipynb  stage_3.py
